[gd_scene load_steps=9 format=2]

[ext_resource path="res://general/state_machine/state_machine.gd" type="Script" id=1]
[ext_resource path="res://content/basic_fractions/levels/make_fraction_from_pie/states/verify.gd" type="Script" id=2]
[ext_resource path="res://content/basic_fractions/levels/cut_pie_into_equal_pieces/states/cut_slices.gd" type="Script" id=3]
[ext_resource path="res://content/basic_fractions/levels/make_pie_from_fraction/states/setup.gd" type="Script" id=4]
[ext_resource path="res://content/basic_fractions/levels/make_pie_from_fraction/states/select_regions.gd" type="Script" id=5]
[ext_resource path="res://content/basic_fractions/levels/make_pie_from_fraction/state_data.gd" type="Script" id=6]
[ext_resource path="res://content/basic_fractions/levels/make_pie_from_fraction/states/snap_slices.gd" type="Script" id=7]
[ext_resource path="res://content/basic_fractions/levels/make_pie_from_fraction/program.gd" type="Script" id=8]

[node name="LevelProgram" type="Node"]
script = ExtResource( 8 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
SetupData = ExtResource( 6 )
_auto_activate = false

[node name="Setup" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="CutSlices" type="Node" parent="StateMachine"]
script = ExtResource( 3 )

[node name="SnapSlices" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="SelectRegions" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="VerifySelection" type="Node" parent="StateMachine"]
script = ExtResource( 2 )
